[gd_scene load_steps=19 format=3 uid="uid://bhhl1fhwbm87q"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_bgsr3"]
[ext_resource type="Texture2D" uid="uid://dw777q8nlpi4q" path="res://assets/player/player.png" id="2_akct7"]
[ext_resource type="PackedScene" uid="uid://dactduiobkbvf" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_hrhi3"]
[ext_resource type="PackedScene" uid="uid://dblqa4mxoclmi" path="res://scenes/component/velocity_component.tscn" id="2_l2jmo"]
[ext_resource type="Script" path="res://scenes/component/health.gd" id="2_oyfop"]
[ext_resource type="PackedScene" uid="uid://b3pq3ybcqimbo" path="res://scenes/component/random_stream_player_2d_component.tscn" id="4_x2uav"]
[ext_resource type="AudioStream" uid="uid://co5oafjc8ba0e" path="res://assets/audio/impactPlate_medium_000.ogg" id="5_1u7oy"]
[ext_resource type="AudioStream" uid="uid://28wnbxtpev6x" path="res://assets/audio/impactPlate_medium_001.ogg" id="6_g1j2c"]
[ext_resource type="AudioStream" uid="uid://cdeou3won25h7" path="res://assets/audio/impactPlate_medium_002.ogg" id="7_w4k04"]
[ext_resource type="AudioStream" uid="uid://crhwy76t3a61e" path="res://assets/audio/impactPlate_medium_003.ogg" id="8_2ffen"]
[ext_resource type="AudioStream" uid="uid://dxxfsx4xbrufr" path="res://assets/audio/impactPlate_medium_004.ogg" id="9_tmcyl"]

[sub_resource type="Animation" id="Animation_jb1cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gloi5"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.0, 0.261799, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 0.8), Vector2(1, 1), Vector2(0.952, 0.8), Vector2(1, 1), Vector2(1, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_em78r"]
_data = {
"RESET": SubResource("Animation_jb1cg"),
"walk": SubResource("Animation_gloi5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7o4t6"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_qpyhr"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h8fs8"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lrx6r"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_bgsr3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_em78r")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_l2jmo")]
max_speed = 100
acceleration = 25.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_oyfop")

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("4_x2uav")]
streams = Array[AudioStream]([ExtResource("5_1u7oy"), ExtResource("6_g1j2c"), ExtResource("7_w4k04"), ExtResource("8_2ffen"), ExtResource("9_tmcyl")])

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_hrhi3")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -26.0
offset_right = 16.0
offset_bottom = -20.0
grow_horizontal = 2
pivot_offset = Vector2(16, 3)
size_flags_horizontal = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_7o4t6")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_qpyhr")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -7)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_h8fs8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_akct7")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_lrx6r")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
